--- a/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/wwwroot/css/design-system.css
+++ b/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/wwwroot/css/design-system.css
@@ -176,6 +176,7 @@
 	--z-modal: 500;
 	--z-popover: 600;
 	--z-tooltip: 700;
+	--z-toast: 800;
 }
 
 /* ==========================================================================
